# midas

./: 500.csv  Dockerfile  Dockerfile.orig  Makefile  Pipfile  README.md  app.py  cwe_dl.py  docker-compose.yml  get_alpha.py  grab_data.py  midas.py  pylintrc  pyproject.toml  shared.py  worker_sec.py  worker_stocks.py  yfin.py
.github/workflows/: build.yml  ci.yml  cron-update-pre-commit.yml  dependabot-auto-merge.yml  dependency-review.yml
api/: Dockerfile  Pipfile  api.py
app/: app.py
pages/: 1_get_data.py  2_stock_details.py  stock_details.py  view_stock.py.off
stock_app/: add_stock.py  get_sp500.py  more_stocks.csv  streamlit_stock.py
