[tool.poetry]
name = "midas"
version = "0.1.0"
description = ""
authors = ["Jon Price <jon@zer0day.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
lxml = "^5.3.0"
beautifulsoup4 = "^4.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
