[tool.poetry]
name = "midas"
version = "0.1.0"
description = ""
authors = ["Jon Price <jon@zer0day.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
pandas = "^2.3.0"
lxml = "^5.4.0"
beautifulsoup4 = "^4.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
